--- a/babel.config.json
+++ b/babel.config.json
@@ -1,4 +1,4 @@
 {
-  "presets": [["@babel/preset-react", {"runtime": "automatic"}]],
+  "presets": [["@babel/preset-react", {"runtime": "automatic"}], "@babel/preset-typescript"],
   "plugins": ["@emotion", "macros"]
 }
