--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
   "dependencies": {
     "@babel/core": "7.12.10",
     "@babel/preset-react": "7.12.10",
+    "@babel/preset-typescript": "7.12.7",
     "@emotion/babel-plugin": "11.1.2",
     "@emotion/react": "11.1.4",
     "@emotion/styled": "11.0.0",
+    "@lingui/cli": "3.3.0",
+    "@lingui/core": "3.3.0",
+    "@lingui/macro": "3.3.0",
+    "@lingui/react": "3.3.0",
     "@material-ui/core": "5.0.0-alpha.20",
     "@material-ui/icons": "5.0.0-alpha.20",
     "@snowpack/plugin-babel": "2.1.5",
@@ -28,5 +33,31 @@
     "react-router-dom": "6.0.0-beta.0",
     "snowpack": "3.0.0-rc.2",
     "typescript": "4.1.3"
+  },
+  "lingui": {
+    "locales": [
+      "en",
+      "ky"
+    ],
+    "catalogs": [
+      {
+        "path": "locales/{locale}",
+        "include": [
+          "./**/*"
+        ],
+        "exclude": [
+          "node_modules/**",
+          "public/**",
+          "build/**",
+          ".build/**",
+          "types/**"
+        ]
+      }
+    ],
+    "format": "po",
+    "formatOptions": {
+      "origins": false
+    },
+    "compileNamespace": "es"
   }
 }
