add RHF and zod WIP

--- a/.example.env
+++ b/.example.env
@@ -1,4 +1,4 @@
-# API hostname without trailing slash. Required
+# API hostname without trailing slash. (not yet) Required
 SNOWPACK_PUBLIC_API=http(s)://localhost:8080/api
 
 # Client app port number. Optional, default is 8080
