--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-router-dom": "6.0.0-beta.0",
     "snowpack": "3.0.0-rc.2",
     "typescript": "4.1.3",
-    "zod": "2.0.0-beta.29"
+    "zod": "3.0.0-alpha.4"
   },
   "lingui": {
     "locales": [
