--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@emotion/babel-plugin": "11.1.2",
     "@emotion/react": "11.1.4",
     "@emotion/styled": "11.0.0",
-    "@hookform/resolvers": "1.3.1",
+    "@hookform/resolvers": "1.4.0-beta.1",
     "@lingui/cli": "3.3.0",
     "@lingui/core": "3.3.0",
     "@lingui/macro": "3.3.0",
