--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@lingui/react": "3.3.0",
     "@material-ui/core": "5.0.0-alpha.20",
     "@material-ui/icons": "5.0.0-alpha.20",
-    "@snowpack/plugin-babel": "2.1.5",
+    "@snowpack/plugin-babel": "2.1.6",
     "@snowpack/plugin-dotenv": "2.0.5",
-    "@snowpack/plugin-optimize": "0.2.10",
-    "@snowpack/plugin-react-refresh": "2.3.9",
+    "@snowpack/plugin-optimize": "0.2.13",
+    "@snowpack/plugin-react-refresh": "2.4.0",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/snowpack-env": "2.3.3",
@@ -31,7 +31,7 @@
     "react-hook-form": "6.14.0",
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
-    "snowpack": "3.0.0-rc.2",
+    "snowpack": "3.0.11",
     "typescript": "4.1.3",
     "zod": "3.0.0-alpha.4"
   },
