--- a/package.json
+++ b/package.json
@@ -1,39 +1,54 @@
 {
   "name": "frontend-template",
   "private": true,
+  "scripts": {
+    "start": "run-p start:src start:locales",
+    "start:src": "snowpack dev --verbose",
+    "start:locales": "lingui extract --watch",
+    "build": "run-p build:src build:locales",
+    "build:src": "snowpack build",
+    "build:locales": "lingui compile",
+    "serve": "server build",
+    "prepare": "snowpack prepare"
+  },
   "dependencies": {
-    "@babel/core": "7.12.10",
-    "@babel/preset-react": "7.12.10",
-    "@babel/preset-typescript": "7.12.7",
-    "@emotion/babel-plugin": "11.1.2",
-    "@emotion/react": "11.1.4",
-    "@emotion/styled": "11.0.0",
-    "@hookform/resolvers": "2.0.0-beta.3",
-    "@lingui/cli": "3.3.0",
-    "@lingui/conf": "3.3.0",
-    "@lingui/core": "3.3.0",
-    "@lingui/macro": "3.3.0",
-    "@lingui/react": "3.3.0",
-    "@material-ui/core": "5.0.0-alpha.20",
-    "@material-ui/icons": "5.0.0-alpha.20",
-    "@snowpack/plugin-babel": "2.1.6",
-    "@snowpack/plugin-dotenv": "2.0.5",
-    "@snowpack/plugin-optimize": "0.2.13",
-    "@snowpack/plugin-react-refresh": "2.4.0",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "@types/snowpack-env": "2.3.3",
-    "babel-plugin-macros": "3.0.1",
-    "dotenv": "8.2.0",
-    "history": "5.0.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-hook-form": "6.14.0",
+    "@babel/core": "latest",
+    "@babel/preset-react": "latest",
+    "@babel/preset-typescript": "latest",
+    "@emotion/babel-plugin": "latest",
+    "@emotion/react": "latest",
+    "@emotion/styled": "latest",
+    "@hookform/resolvers": "2.0.0",
+    "@lingui/cli": "latest",
+    "@lingui/conf": "latest",
+    "@lingui/core": "latest",
+    "@lingui/macro": "latest",
+    "@lingui/react": "latest",
+    "@lingui/snowpack-plugin": "3.5.0",
+    "@material-ui/core": "5.0.0-alpha.28",
+    "@material-ui/icons": "5.0.0-alpha.28",
+    "@snowpack/plugin-babel": "latest",
+    "@snowpack/plugin-dotenv": "latest",
+    "@snowpack/plugin-optimize": "latest",
+    "@snowpack/plugin-react-refresh": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "@types/snowpack-env": "latest",
+    "babel-plugin-macros": "latest",
+    "dotenv": "latest",
+    "history": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-hook-form": "latest",
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
-    "snowpack": "3.0.11",
-    "typescript": "4.1.3",
-    "zod": "3.0.0-alpha.4"
+    "snowpack": "latest",
+    "typescript": "latest",
+    "zod": "3.0.0-alpha.33"
+  },
+  "devDependencies": {
+    "npm-run-all": "4.1.5",
+    "server": "1.0.32"
   },
   "lingui": {
     "locales": [
@@ -47,6 +62,7 @@
           "./**/*"
         ],
         "exclude": [
+          ".git/**",
           "node_modules/**",
           "public/**",
           "build/**",
