--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@babel/core": "7.12.10",
     "@babel/preset-react": "7.12.10",
     "@babel/preset-typescript": "7.12.7",
+    "@date-io/date-fns": "2.10.8",
     "@emotion/babel-plugin": "11.1.2",
     "@emotion/react": "11.1.4",
     "@emotion/styled": "11.0.0",
@@ -16,6 +17,7 @@
     "@lingui/react": "3.3.0",
     "@material-ui/core": "5.0.0-alpha.20",
     "@material-ui/icons": "5.0.0-alpha.20",
+    "@material-ui/pickers": "3.2.10",
     "@snowpack/plugin-babel": "2.1.6",
     "@snowpack/plugin-dotenv": "2.0.5",
     "@snowpack/plugin-optimize": "0.2.13",
