--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "frontend-template",
   "private": true,
+  "scripts": {
+    "start": "snowpack dev"
+  },
   "dependencies": {
     "@babel/core": "7.12.10",
     "@babel/preset-react": "7.12.10",
@@ -8,7 +11,7 @@
     "@emotion/babel-plugin": "11.1.2",
     "@emotion/react": "11.1.4",
     "@emotion/styled": "11.0.0",
-    "@hookform/resolvers": "2.0.0-beta.3",
+    "@hookform/resolvers": "2.0.1",
     "@lingui/cli": "3.3.0",
     "@lingui/conf": "3.3.0",
     "@lingui/core": "3.3.0",
@@ -28,12 +31,12 @@
     "history": "5.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-hook-form": "6.14.0",
+    "react-hook-form": "7.1.1",
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
     "snowpack": "3.0.11",
     "typescript": "4.1.3",
-    "zod": "3.0.0-alpha.4"
+    "zod": "3.0.0-alpha.33"
   },
   "lingui": {
     "locales": [
